DMP-4633 Review and resolve sonar issues with the master branch
Replaced usage of 'Stream.collect(Collectors.toList())' with 'Stream.toList()' as per sonar complaint